--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-*.dart linguist-language=Dart
+ios/* linguist-vendored
+android/* linguist-vendored
+*.cpp linguist-vendored
+*.h linguist-vendored
+*.mm linguist-vendored
